@@ -1,4 +1,4 @@
-\label{\detokenize{complex:complex-spanning-cell}}
+\label{\detokenize{complex:complex-spanning-cell}}\sphinxnameddest{\detokenize{complex-spanning-cell}}
 \sphinxAtStartPar
 table having …
 \begin{itemize}
