@@ -1,4 +1,4 @@
-\label{\detokenize{complex:grid-table}}
+\label{\detokenize{complex:grid-table}}\sphinxnameddest{\detokenize{grid-table}}
 
 \begin{savenotes}\sphinxattablestart
 \centering
