@@ -1,4 +1,4 @@
-\label{\detokenize{longtable:longtable}}
+\label{\detokenize{longtable:longtable}}\sphinxnameddest{\detokenize{longtable}}
 
 \begin{savenotes}\sphinxatlongtablestart\begin{longtable}[c]{|l|l|}
 \hline
