@@ -1,4 +1,4 @@
-\label{\detokenize{longtable:longtable-having-align-option}}
+\label{\detokenize{longtable:longtable-having-align-option}}\sphinxnameddest{\detokenize{longtable-having-align-option}}
 
 \begin{savenotes}\sphinxatlongtablestart\begin{longtable}[r]{|l|l|}
 \hline
