@@ -1,4 +1,4 @@
-\label{\detokenize{longtable:longtable-having-caption}}
+\label{\detokenize{longtable:longtable-having-caption}}\sphinxnameddest{\detokenize{longtable-having-caption}}
 
 \begin{savenotes}\sphinxatlongtablestart\begin{longtable}[c]{|l|l|}
 \sphinxthelongtablecaptionisattop
