@@ -1,4 +1,4 @@
-\label{\detokenize{longtable:longtable-having-problematic-cell}}
+\label{\detokenize{longtable:longtable-having-problematic-cell}}\sphinxnameddest{\detokenize{longtable-having-problematic-cell}}
 
 \begin{savenotes}\sphinxatlongtablestart\begin{longtable}[c]{|*{2}{\X{1}{2}|}}
 \hline
