@@ -1,4 +1,4 @@
-\label{\detokenize{longtable:longtable-having-both-stub-columns-and-problematic-cell}}
+\label{\detokenize{longtable:longtable-having-both-stub-columns-and-problematic-cell}}\sphinxnameddest{\detokenize{longtable-having-both-stub-columns-and-problematic-cell}}
 
 \begin{savenotes}\sphinxatlongtablestart\begin{longtable}[c]{|*{3}{\X{1}{3}|}}
 \hline
