@@ -1,4 +1,4 @@
-\label{\detokenize{longtable:longtable-having-verbatim}}
+\label{\detokenize{longtable:longtable-having-verbatim}}\sphinxnameddest{\detokenize{longtable-having-verbatim}}
 
 \begin{savenotes}\sphinxatlongtablestart\begin{longtable}[c]{|*{2}{\X{1}{2}|}}
 \hline
