@@ -1,7 +1,7 @@
-\label{\detokenize{longtable:longtable-having-widths-option}}
+\label{\detokenize{longtable:longtable-having-widths-option}}\sphinxnameddest{\detokenize{longtable-having-widths-option}}
 
 \begin{savenotes}\sphinxatlongtablestart\begin{longtable}[c]{|\X{30}{100}|\X{70}{100}|}
-\hline\noalign{\phantomsection\label{\detokenize{longtable:namedlongtable}}\label{\detokenize{longtable:mylongtable}}}%
+\hline\noalign{\phantomsection\label{\detokenize{longtable:namedlongtable}}\label{\detokenize{longtable:mylongtable}}\sphinxnameddest{\detokenize{namedlongtable}}\sphinxnameddest{\detokenize{mylongtable}}}%
 \sphinxstyletheadfamily 
 \sphinxAtStartPar
 header1
