@@ -1,4 +1,4 @@
-\label{\detokenize{longtable:longtable-having-both-widths-and-problematic-cell}}
+\label{\detokenize{longtable:longtable-having-both-widths-and-problematic-cell}}\sphinxnameddest{\detokenize{longtable-having-both-widths-and-problematic-cell}}
 
 \begin{savenotes}\sphinxatlongtablestart\begin{longtable}[c]{|\X{30}{100}|\X{70}{100}|}
 \hline
