@@ -1,4 +1,4 @@
-\label{\detokenize{longtable:longtable-with-tabularcolumn}}
+\label{\detokenize{longtable:longtable-with-tabularcolumn}}\sphinxnameddest{\detokenize{longtable-with-tabularcolumn}}
 
 \begin{savenotes}\sphinxatlongtablestart\begin{longtable}[c]{|c|c|}
 \hline
