@@ -1,4 +1,4 @@
-\label{\detokenize{tabular:simple-table}}
+\label{\detokenize{tabular:simple-table}}\sphinxnameddest{\detokenize{simple-table}}
 
 \begin{savenotes}\sphinxattablestart
 \centering
