@@ -1,4 +1,4 @@
-\label{\detokenize{tabular:table-having-caption}}
+\label{\detokenize{tabular:table-having-caption}}\sphinxnameddest{\detokenize{table-having-caption}}
 
 \begin{savenotes}\sphinxattablestart
 \centering
