@@ -1,4 +1,4 @@
-\label{\detokenize{tabular:table-with-cell-in-first-column-having-three-paragraphs}}
+\label{\detokenize{tabular:table-with-cell-in-first-column-having-three-paragraphs}}\sphinxnameddest{\detokenize{table-with-cell-in-first-column-having-three-paragraphs}}
 
 \begin{savenotes}\sphinxattablestart
 \centering
