@@ -1,4 +1,4 @@
-\label{\detokenize{tabular:table-having-verbatim}}
+\label{\detokenize{tabular:table-having-verbatim}}\sphinxnameddest{\detokenize{table-having-verbatim}}
 
 \begin{savenotes}\sphinxattablestart
 \centering
