@@ -1,8 +1,8 @@
-\label{\detokenize{tabular:table-having-widths-option}}
+\label{\detokenize{tabular:table-having-widths-option}}\sphinxnameddest{\detokenize{table-having-widths-option}}
 
 \begin{savenotes}\sphinxattablestart
 \centering
-\phantomsection\label{\detokenize{tabular:namedtabular}}\label{\detokenize{tabular:mytabular}}\nobreak
+\phantomsection\label{\detokenize{tabular:namedtabular}}\label{\detokenize{tabular:mytabular}}\sphinxnameddest{\detokenize{namedtabular}}\sphinxnameddest{\detokenize{mytabular}}\nobreak
 \begin{tabular}[t]{|\X{30}{100}|\X{70}{100}|}
 \hline
 \sphinxstyletheadfamily 
