@@ -1,4 +1,4 @@
-\label{\detokenize{tabular:table-having-both-widths-and-problematic-cell}}
+\label{\detokenize{tabular:table-having-both-widths-and-problematic-cell}}\sphinxnameddest{\detokenize{table-having-both-widths-and-problematic-cell}}
 
 \begin{savenotes}\sphinxattablestart
 \centering
