@@ -1,4 +1,4 @@
-\label{\detokenize{tabular:table-having-align-option-tabular}}
+\label{\detokenize{tabular:table-having-align-option-tabular}}\sphinxnameddest{\detokenize{table-having-align-option-tabular}}
 
 \begin{savenotes}\sphinxattablestart
 \raggedright
