@@ -1,4 +1,4 @@
-\label{\detokenize{tabular:table-with-tabularcolumn}}
+\label{\detokenize{tabular:table-with-tabularcolumn}}\sphinxnameddest{\detokenize{table-with-tabularcolumn}}
 
 \begin{savenotes}\sphinxattablestart
 \centering
