@@ -1,4 +1,4 @@
-\label{\detokenize{tabular:table-having-align-option-tabulary}}
+\label{\detokenize{tabular:table-having-align-option-tabulary}}\sphinxnameddest{\detokenize{table-having-align-option-tabulary}}
 
 \begin{savenotes}\sphinxattablestart
 \raggedleft
