@@ -760,6 +760,7 @@ def test_reference_in_caption_and_codeblock_in_footnote(app, status, warning):
     assert '\\subsubsection*{The rubric title with a reference to {[}AuthorYear{]}}' in result
     assert ('\\chapter{The section with a reference to \\sphinxfootnotemark[5]}\n'
             '\\label{\\detokenize{index:the-section-with-a-reference-to}}'
+            '\\sphinxnameddest{\\detokenize{the-section-with-a-reference-to}}'
             '%\n\\begin{footnotetext}[5]\\sphinxAtStartFootnote\n'
             'Footnote in section\n%\n\\end{footnotetext}') in result
     assert ('\\caption{This is the figure caption with a footnote to '
@@ -1447,9 +1448,12 @@ def test_latex_labels(app, status, warning):
             r'\label{\detokenize{index:id1}}'
             r'\label{\detokenize{index:figure2}}'
             r'\label{\detokenize{index:figure1}}'
+            r'\sphinxnameddest{\detokenize{figure2}}'
+            r'\sphinxnameddest{\detokenize{figure1}}'
             r'\end{figure}' in result)
     assert (r'\caption{labeled figure}'
-            '\\label{\\detokenize{index:figure3}}\n'
+            '\\label{\\detokenize{index:figure3}}'
+            '\\sphinxnameddest{\\detokenize{figure3}}\n'
             '\\begin{sphinxlegend}\n\\sphinxAtStartPar\n'
             'with a legend\n\\end{sphinxlegend}\n'
             r'\end{figure}' in result)
@@ -1457,29 +1461,41 @@ def test_latex_labels(app, status, warning):
     # code-blocks
     assert (r'\def\sphinxLiteralBlockLabel{'
             r'\label{\detokenize{index:codeblock2}}'
-            r'\label{\detokenize{index:codeblock1}}}' in result)
+            r'\label{\detokenize{index:codeblock1}}'
+            r'\sphinxnameddest{\detokenize{codeblock2}}'
+            r'\sphinxnameddest{\detokenize{codeblock1}}' in result)
     assert (r'\def\sphinxLiteralBlockLabel{'
-            r'\label{\detokenize{index:codeblock3}}}' in result)
+            r'\label{\detokenize{index:codeblock3}}'
+            r'\sphinxnameddest{\detokenize{codeblock3}}' in result)
 
     # tables
     assert (r'\sphinxcaption{table caption}'
             r'\label{\detokenize{index:id2}}'
             r'\label{\detokenize{index:table2}}'
-            r'\label{\detokenize{index:table1}}' in result)
+            r'\label{\detokenize{index:table1}}'
+            r'\sphinxnameddest{\detokenize{table2}}'
+            r'\sphinxnameddest{\detokenize{table1}}' in result)
     assert (r'\sphinxcaption{table caption}'
-            r'\label{\detokenize{index:table3}}' in result)
+            r'\label{\detokenize{index:table3}}'
+            r'\sphinxnameddest{\detokenize{table3}}' in result)
 
     # sections
     assert ('\\chapter{subsection}\n'
             r'\label{\detokenize{index:subsection}}'
             r'\label{\detokenize{index:section2}}'
-            r'\label{\detokenize{index:section1}}' in result)
+            r'\label{\detokenize{index:section1}}'
+            r'\sphinxnameddest{\detokenize{subsection}}'
+            r'\sphinxnameddest{\detokenize{section2}}'
+            r'\sphinxnameddest{\detokenize{section1}}' in result)
     assert ('\\section{subsubsection}\n'
             r'\label{\detokenize{index:subsubsection}}'
-            r'\label{\detokenize{index:section3}}' in result)
+            r'\label{\detokenize{index:section3}}'
+            r'\sphinxnameddest{\detokenize{subsubsection}}'
+            r'\sphinxnameddest{\detokenize{section3}}' in result)
     assert ('\\subsection{otherdoc}\n'
             r'\label{\detokenize{otherdoc:otherdoc}}'
-            r'\label{\detokenize{otherdoc::doc}}' in result)
+            r'\label{\detokenize{otherdoc::doc}}'
+            r'\sphinxnameddest{\detokenize{otherdoc}}' in result)
 
     # Embedded standalone hyperlink reference (refs: #5948)
     assert result.count(r'\label{\detokenize{index:section1}}') == 1
@@ -1522,6 +1538,7 @@ def test_index_on_title(app, status, warning):
     result = (app.outdir / 'python.tex').read_text()
     assert ('\\chapter{Test for index in top level title}\n'
             '\\label{\\detokenize{contents:test-for-index-in-top-level-title}}'
+            '\\sphinxnameddest{\\detokenize{test-for-index-in-top-level-title}}'
             '\\index{index@\\spxentry{index}}\n'
             in result)
 
