@@ -62,6 +62,7 @@ Features added
 * #2030: :rst:dir:`code-block` and :rst:dir:`literalinclude` supports automatic
   dedent via no-argument ``:dedent:`` option
 * C++, also hyperlink operator overloads in expressions and alias declarations.
+* #6276: LaTeX: Support external hyperlinking to a named destination within a PDF
 * #8247: Allow production lists to refer to tokens from other production groups
 
 Bugs fixed
@@ -115,7 +116,7 @@ Bugs fixed
   (or pdflatex and :confval:`latex_use_xindy` set to True) with memoir class
 * #8780: LaTeX: long words in narrow columns may not be hyphenated
 * #8788: LaTeX: ``\titleformat`` last argument in sphinx.sty should be
-  bracketed, not braced (and is anyhow not needed) 
+  bracketed, not braced (and is anyhow not needed)
 
 Testing
 --------
